[gd_scene load_steps=3 format=3 uid="uid://bvai3hmk37tdu"]

[ext_resource type="Script" path="res://Inventory.gd" id="1_epagp"]
[ext_resource type="Texture2D" uid="uid://b8rfyfk1gsvyl" path="res://icon.svg" id="2_6mwgw"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epagp")

[node name="MainVContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Items" type="HBoxContainer" parent="MainVContainer"]
layout_mode = 2

[node name="ItemGrid" type="GridContainer" parent="MainVContainer/Items"]
layout_mode = 2
columns = 3

[node name="HeldItem" type="TextureButton" parent="MainVContainer/Items"]
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("2_6mwgw")

[node name="Item_Label" type="Label" parent="MainVContainer"]
layout_mode = 2
text = "Title"

[node name="Description" type="Label" parent="MainVContainer"]
layout_mode = 2
text = "Description here"
